Work to make the tiles perform better on desktop
Set title from KB description
Better hover styling

--- a/launcher/mkb.css
+++ b/launcher/mkb.css
@@ -56,6 +56,12 @@ html, body{
 .mkb-list-tile:hover{
     opacity: 0.8;
 }
+.mkb-list-tile:hover .mkb-list-tile-txt{
+    background-color: #16ab39;
+    color: #fff;
+    opacity: 1.0;
+    text-shadow: none;
+}
 .mkb-list-tile-txt{
     padding: 0.5em 8px;
     background-color: rgba(255, 255, 255, 0.5);
